Sun Jun 21 00:08:32 1998  Torben Weis  <weis@localhost>

	* kioslave/icon.cpp (Open): Fixed little QString bug

	* kfmexec.cpp (slotMimeType): Made it work with the new goodie.

	* root.cpp (slotPopupOpenWith): Made it work with the new goodie.

	* kfmman.cpp (slotMimeType): Made it work with the new goodie.

	* kfmview.cpp (slotPopupOpenWith): Made it work with the new goodie.

	* kfmprops.cpp (BindingPropsPage): Made it work with the changes
	  in kbind.cpp/h

	* kbind.h (class KMimeBind): Changed internal data structures.
	  Some cleanups.

	* kfmdlg.cpp (OpenWithDlg): Added a little goodie :-)

	* bookmark.cpp (KBookmark): Removed debug output

	* main.cpp (main): sockets do now have the name
	  /tmp/kfm_uid_pid_display and /tmp/kio_uid_pid_display.
	  This solves problems with sockets names used by other
	  users. This should solve the problem that is sometimes
	  unable to connect/create is socket.

	* kioslave/main.cpp (main): Uses KApplication instead of
	  QApplication now.

	* kioslave/icon.cpp (Open): Uses kapp->localkdedir()

Sat Jun 20 22:04:25 1998  Torben Weis  <weis@localhost>

	* bookmark.cpp (scanIntern): You can now link from the bookmarks
	  to the home directory without seeing infinite recursion.
	  ( Some people do crazy things )

	* root.cpp (update): Removed all ".kde" dependencies

	* bookmark.cpp (scanIntern): Fixed bug with too many open files/directories

	* main.cpp (main): Uses kapp->localkdedir.

	* bookmark.cpp (scanIntern): Accept only regular files as
	  bookmarks. Skip fifos, pipes etc.

	* kfmjob.cpp (browse): Reset error flag. Entering an invalid URL
	  brings up a window. After that you could not open any other
	  file. This is fixed now.

	* bookmark.cpp (scanIntern): Check wether a file is really a kde
	  config file
	
	* bookmark.cpp (KBookmarkManager): Uses kapp->localkdedir()

Tue Jun 16 16:04:12 1998  Jacek Konieczny <jajcus@zeus.polsl.gliwice.pl>

	* kioslave/http.cpp